--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 *, ::before, *::after {
@@ -8,7 +8,7 @@ html {
 
 body {
   background-color: #ccc;
-font-family:sans-serif;
+  font-family: sans-serif;
 }
 
 h1 {
